more tests
Signed-off-by: rithin-pullela-aws <rithinp@amazon.com>